plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

sourceCompatibility = '11'

javafx {
    version = "11"
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.web']
}

compileJava {
    options.compilerArgs += ['--add-exports', 'javafx.graphics/com.sun.glass.ui=nativejavafx.taskbar']
}

jar {
    manifest {
    }
    from {
    }
}

task fatJar(type: Jar) {
    manifest {
    }
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
    implementation 'org.jetbrains:annotations:19.0.0'
    implementation 'com.nativelibs4java:bridj:0.7.0'
}
